@@ -2,28 +2,28 @@
 Hash: SHA256
 
 AUX fish-2.1.0-tinfo.patch 1037 SHA256 eb6c44ec4d5ece0dbe305112504083f011b3999c274fc86786a7bf9c5ee967b4 SHA512 8ec3c9a003f30a4e05685de1492bc3a795dbbdb1cd5ab95769fc3a8f9df478e15f64a12730e71ed4d2485867c0a59268620ef3ef08982d0a481282f9a20d59a8 WHIRLPOOL e594423661107afb10b09acac4026c58ad708eac27ae3781dd4056a8ddc29d7b12fba66709fc0077f5645905907b00a849515e9a0e3c98a035920177363f46ec
-DIST fish-2.0.0.tar.gz 1540652 SHA256 7e4c4a0b3c518769a3d31b235e743de7a8d52f851ad19d2df9d53534e6238303 SHA512 a41e1b3737d5b556e08728312f486c55d1405492dd0be8a97694dabc0974b90ecbacfc74d3e427d63e9b3a639a03844b98ecded68cb3060522eee68879c28ce1 WHIRLPOOL f4e0013ceffcc04be6e9a2187da621db5e1e0592c5c9707bda114d2c9162758a83371392bedbecb5c8ff6eb9d065c2c356581fc21309527986ac2bc3fb0866cf
 DIST fish-2.1.0-docdir.patch 1925 SHA256 9a6ed852cd58a9d8a24ac2c222026f1e6f6aa7bb8e515b5a1aa64414dedb81b5 SHA512 724120855bbb4cd6c9db440ff9b001a92c01a67f75c86be95fc890c52d3802f6857c27ee989f183a39aa5aace576fce72e9e36c6b7f0457f1ba4c9d6f54efb6f WHIRLPOOL ca31e6560bd36147184443b84ad96987003cfb486d14fccb74f19a88489f355814ed2ac136b4fcc14e5fb9986b069a395ef4e60aa0a30a0ce55d893499711003
 DIST fish-2.1.0.tar.gz 1707921 SHA256 af527af9d145df5675ca3031c1a87007d4f4753a1cde49da88f4eb883a1cf044 SHA512 cd8a678df948baefafbf54a14ece7b52fff6620939d82ba0d0f4cd8ad1ae59842a847231de8465a4471e48fb86866f1113bba4ec9cd6433851bb538b1f965075 WHIRLPOOL 45cf56f2711380764065963a374f7613d83f07c8c2bc7e9724c5f2bfb55720989d52dad2bba85354013de98af58c10dad64a2cbc2b6f409f997f2ed8a2720881
-EBUILD fish-2.0.0.ebuild 1666 SHA256 1d2ed69ba2580d69c1234b43505fe776bf17ad94613dac9898eb81f191cd61f0 SHA512 bb6c538042d3b23084e7688dcb469dbada3b8e60b8c29b26bd4a7f7156913e895b9f77421010cfabcd994e35ac0869f2e03f2bcb818d5022172c1b731ba65392 WHIRLPOOL f219a0f29d4ce98f9d3b91057638d84b006ad8d7acd02768bf2b1d871b8bf98d714963be4f037163029e4122f81eac55845f60c1681b4a1e57adf418e83a454a
+DIST fish-2.1.1.tar.gz 1681744 SHA256 b7e4d3c3d55fc3859edcb20462fcf0d14ab26e920eddcd503072e8105284d924 SHA512 c6b41a7514d684bc165bdf03edd0f07b0cdfbcc827a3bcc6e9105bbf6b94a60962bd7fffaf5f9c44c450da3d4b6af4bdcf72fbbaaa043851c631d8c2a1344dd6 WHIRLPOOL c6bcbfea35d68f99903633f06a436cf982f6fc01123cebbb4342be1b3f3be106c0ac144d24b2069bf34bc7e3540d26526a8ef8b74e4f27255525ad0d7cb70774
 EBUILD fish-2.1.0-r2.ebuild 2347 SHA256 ccc834c91865be589c9d5976df4a85048a9bab859c1404f9c608539cea170e70 SHA512 ccb416a1e043329e41bbe4b2cc9b1030ddb9d0461ad33d10cb0cd3a801b40f751cfa79086f6eb56aa18fe57cb5d5442294ceadba0a5de485d83055731b8143b3 WHIRLPOOL da6a55b754909190ba7529c7aa8d0d1f2c8fc59e412f1a29d25f7c0bee93a26f0a774ef7a4c1cbe163324270f96a110bdf824ba45e379c795d7a63faec761df9
 EBUILD fish-2.1.0-r3.ebuild 2397 SHA256 3a02301f8bdc3f21388689626ccafafd3a89944e6cd432b0790345aba58763ac SHA512 f76a2e48b54a006f6a2ae4dcdecf87d5cfdfde61071810cf4facd50e7e4ff52de6e8eeb0f2fbe826b00aca518f1638cf15e1153ffba650f04359db25b2637660 WHIRLPOOL 554cc5e68cccb872dadf1f479957199658fae3fd519309bc956548813ab69b0733d264a0079ad5320998c2f0e32b06caf7db7c12dd21059ba2be42dbcecc3308
-MISC ChangeLog 12416 SHA256 2a2ad3602b604696f3c4c60161d7b9c660390a97806e81696aad85878b6c00fc SHA512 670afb80f43037de4c8c9a3ecdf548f0826c566f3b801e90190d873238814582ed188cd0d1b41c6011bf6d893eef55d4874dd8ece302a7944742b999551f6c53 WHIRLPOOL c9d56507a59095eed3c779ebba7b569a708ec4ec8c97e920982e9c5bb75533cf15a1a9e8a2c202312e380364d5f6a21ed182423add235955679a637c4e0f3bce
+EBUILD fish-2.1.1.ebuild 2246 SHA256 0fa7d99ee7d071c1050828da54533c254c1fb177a97dccd8cfb2ae6f2fd31668 SHA512 e264b89e531ed9a5bf4da5f17b85dd1dc6a5fd3baf0c906054004c8676860b49f7b50d1bb08cedd71b34d376f8aa05b212c7946fe74778560462207391e47f87 WHIRLPOOL ddb5288c987fcf3999a3c69cea49df7786754ec0971386612de3ac67ed9c14e80462e85c027af9cf14d970af685b84f72316b5221d26274a3c05685075e14a43
+MISC ChangeLog 12593 SHA256 3817ab86a3ea921c9e638819ea717e46b86544f75df23457eacda822dfc86ce8 SHA512 98da8c730755602ca0ad863479eb63b92b40672dbcc6698049b2ceb34a31c63342b437a8fab191253729886a618aabc1dfc5fd74805cebe3aab9c98eedc84fff WHIRLPOOL 9bf1ce58355388a54820a1a8701b45c1aa4bbb6043a5bbaec66969ccc0595a9dfcb57133e0e1b717f031c4c98477df2e485e978af56654629c355b0e3a63f4ed
 MISC metadata.xml 237 SHA256 97e2852866e146fd242be6cddceb93aebc2b28056cdafa3ff688a0cfc97a5065 SHA512 d21eed02cc15021ad5f18c4c932afdf4d6cfbb64a243764b61914aac9e57f6089ebb9e3a37e136e5bb7bf4f28d29bba49279d52a75acc3a6f921c770213758a5 WHIRLPOOL 92462bf73803127a88d9e2a02503d36efd2b8f1c938f3f2c00145db02871ea9ce241eba371138b6ab80c4774f858250b5eba08886ff355c0f212bfbc2cda3d9f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT5hAaAAoJELp701BxlEWfUCsQAIRk7/JE0pkj94ZwXpqagFTo
-cxi4r4NYJnCm4iTwuU8N77iKz+kc7BkDHcw/tK9o3MQarqGUA5FeQYRM/1DGhI4m
-hLJUWu+Ymic8e2wfi1ooc6txRitZTZUDz7mMjGiIsGMGWjEvgK4sr60gehk8Y9Gs
-AD1V38e/YdhJfbNzB/9RILBgq0YCqEzfGO7SW4DcieYnruebLKZblPnJ9j0em21a
-87e9QDggdHinkEgOqCZT/MlMDC2iYJi7UFtJ39XUvGRm8UXvqCzKDB/C3+f5vP8E
-e8zZqmDcghnivci5TQiK20mMgwIWJqKqHjTBmhI6taC6mMdafJ6AdO8qzj0/w0MH
-Vj6EgAca7XXnqf4UcCJqMIZgtpJvb7ND9A3rRUPWmVthPxpt44bUusXjAXEqEo8T
-pAUgK1uboJNlFyVMHe+NnbXdJwPCet7fXgsjx9b8qR6JJNWdaaIkeeEhWtwjTyH3
-5R3mRd7UbMTLFBWF96vY6jaAuR2QswJrobt/nienqZCaQNNAfGgaMGxdARIYjwRR
-KDKQea6G2SajGWC+uMLUwgFS57eNfcMUMx6xnIum9KsP6Z4k5xAthzGseNp4G36W
-uBiOJH2XlR+Icza2TpUyqAHLHNn8EHu+HjGSBKhR1RY2Dd6EkgxFwgm98MfeDEj1
-9p8wP2D4yRZIE186JcFH
-=ZdGf
+iQIcBAEBCAAGBQJUae50AAoJEPiazRVxLXTF1xAP/iGrHtpHNnzTFSKs3aN2Q23A
+j2YwgkmbsBdfkquwJkpKFcRQhlbTvDIrJgm6kPyyo90H/RqrTO/Xpl8qiQJB1+eb
+2RTg9A+/JiFu/X+rqj5OWGX+997GJz2N7Q0IZBLKkZMgio+el1BB44hI40GhnI30
+IMxBAaXLD8vaenVr7VECX1YySWPvDHv7GP1Qi1nBk+dW7+t+UKqoQDbH85Rbsk7b
+2RvjZSmdb8uZ/MkPLoBK7d8q0CHeHyxqdsf0zaUT4WlbpNpMwSOlBBJluKkyW6iz
+3V3R+dkDlIju9QLgGsqy/wo+D7yC7ihse8g7j8Uth9efb5ISuUVFdtuCgtyOUwaS
+q1XOApD8BLvGw6EMvXbO8Y1k6fJFWie0T0sbeEBxq7WK8G+BO9LkBj6yF0BWoN/D
+tlU4QcBMEnTXPyOWg+ksP3U7OaPB/Obv4/mROvCYdgyZkpxsOfstyLy6q/rsRXnt
+odc7QEuoU1eKqQB1rgiTZgwW7PK1wqI0/Y/7AAh2n1tRSEoE9OenpKI/MwO0fZqA
+KK/GZkvg5ipP/c5RQzdjCh9ohsQn/3AXM3oGeYyBH0KfIV/pQPML4unnt9IACzuR
+Ju69T9rbNDXpskNBkcC5CoaKaBt2/Vlo559foNY0n/DTrFlGmL525BD5+VcX8+oi
+hIMn2gi85acjN1Yf81az
+=EoNk
 -----END PGP SIGNATURE-----
