@@ -1,8 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/fish/fish-2.0.0.ebuild,v 1.5 2014/02/11 12:28:14 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/fish/fish-2.1.1.ebuild,v 1.1 2014/11/17 12:47:47 polynomial-c Exp $
 
 EAPI=5
+
+PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} )
 
 inherit base autotools
 
@@ -12,18 +14,21 @@ SRC_URI="http://fishshell.com/files/${PV}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ppc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
+KEYWORDS="~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE="X"
 
 DEPEND="sys-libs/ncurses
 	sys-devel/bc
 	sys-devel/gettext
 	X? ( x11-misc/xsel )"
+
+# fish can add man-page completions from lzma and xz compressed man pages
+# through a python script. That's why we depend on python here (bug #490478)
 RDEPEND="${DEPEND}"
 
-S="${WORKDIR}/${PN}"
-
 src_prepare() {
+	epatch "${FILESDIR}"/${PN}-2.1.0-tinfo.patch #459768
+
 	eautoreconf
 }
 
@@ -34,6 +39,14 @@ src_configure() {
 	econf \
 		docdir="${EPREFIX}"/usr/share/doc/${PF} \
 		--bindir="${EPREFIX}"/bin
+}
+
+src_test() {
+	if has_version ~${CATEGORY}/${P} ; then
+		emake test
+	else
+		ewarn "The test suite only works when the package is already installed"
+	fi
 }
 
 pkg_postinst() {
@@ -52,6 +65,11 @@ pkg_postinst() {
 	elog "Please add a \"BROWSER\" variable to ${PN}'s environment pointing to the"
 	elog "browser of your choice to get acces to ${PN}'s help system:"
 	elog "  BROWSER=\"/usr/bin/firefox\""
+	elog
+	elog "In order to get lzma and xz support for man-page completion please"
+	elog "emerge one of the following packages:"
+	elog "  dev-python/backports-lzma"
+	elog "  >=dev-lang/python-3.3"
 	elog
 	elog "Have fun!"
 }
