@@ -1,13 +1,13 @@
-DEFINED_PHASES=compile configure install postinst prepare unpack
+DEFINED_PHASES=compile configure install postinst prepare test unpack
 DEPEND=sys-libs/ncurses sys-devel/bc sys-devel/gettext X? ( x11-misc/xsel ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
 DESCRIPTION=fish is the Friendly Interactive SHell
 EAPI=5
 HOMEPAGE=http://fishshell.com/
 IUSE=X
-KEYWORDS=amd64 ppc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
+KEYWORDS=~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
 LICENSE=GPL-2
 RDEPEND=sys-libs/ncurses sys-devel/bc sys-devel/gettext X? ( x11-misc/xsel )
 SLOT=0
-SRC_URI=http://fishshell.com/files/2.0.0/fish-2.0.0.tar.gz
+SRC_URI=http://fishshell.com/files/2.1.1/fish-2.1.1.tar.gz
 _eclasses_=autotools	7bcca47e6ac6bbfa251fe7e9483fcf67	base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	6faef4c127028ccbba3a11400d24ae34	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=968e7b0e6e793cada5e43fe93e513d50
+_md5_=d114e1022112c3be1cc00141698d663b
