@@ -1,6 +1,12 @@
 # ChangeLog for app-shells/fish
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/fish/ChangeLog,v 1.68 2014/08/09 12:12:09 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/fish/ChangeLog,v 1.69 2014/11/17 12:47:47 polynomial-c Exp $
+
+*fish-2.1.1 (17 Nov 2014)
+
+  17 Nov 2014; Lars Wendler <polynomial-c@gentoo.org> -fish-2.0.0.ebuild,
+  +fish-2.1.1.ebuild:
+  Security bump (bug #509044). Removed old.
 
   09 Aug 2014; Agostino Sarubbo <ago@gentoo.org> fish-2.1.0-r2.ebuild:
   Stable for ppc, wrt bug #493316
